--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "next": "14.2.14",
+    "@libsql/client": "^0.14.0",
+    "@prisma/client": "^6.2.1",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.3",
+    "next": "^15.1.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
@@ -18,8 +23,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.30.1",
     "postcss": "^8",
+    "prisma": "^6.2.1",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.2",
     "typescript": "^5"
   }
 }
